--- a/SphyPlugin/config/sphy_config_template.cfg
+++ b/SphyPlugin/config/sphy_config_template.cfg
@@ -2,7 +2,7 @@
 # A spatially distributed hydrological model that calculates soil-water and
 # cryosphere processes on a cell-by-cell basis.
 #
-# Copyright (C) 2013  Wilco Terink
+# Copyright (C) 2013  FutureWater
 # 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,14 +17,14 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# Email: w.terink@futurewater.nl OR terinkw@gmail.com
+# Email: info@futurewater.nl
 
 #***********************************************************************************************
 # CONFIGURATION FILE BELONGING TO SPHY. MODEL CHANGES CAN BE DONE IN THIS FILE. THIS FILE
 # CAN BE USED TO CHANGE MODEL INPUT, SET PARAMETERS, MODEL OUTPUT, AND TURN ON/OFF MODULES
 #
 # THE SPATIAL PROCESSES IN HYDROLOGY (SPHY) MODEL
-# AUTHOR: Wilco Terink
+# AUTHORS: W. Terink, A. Lutz, G. Simons, W. Immerzeel and P. Droogers
 # VERSION 2.0
 #***********************************************************************************************
 
